--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <button class="nav-btn active" data-section="tasbih">التسبيح</button>
             <button class="nav-btn" data-section="adhkar">الأذكار</button>
-            <button class="nav-btn" data-section="quran"<button/>القرآن<
+            <button class="nav-btn" data-section="quran"<button/>القرآن
             <button class="nav-btn" data-section="dua">الأدعية</button>
             <button class="nav-btn" data-section="ai">المساعد الإسلامي</button>
         </nav>
